// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Profile test renders dashboard - display name should load from either author or authorDetails 1`] = `
<div
  className="imageCover"
>
  <div
    className="is-pulled-right"
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Your profile help...."
      title="Your dashboard"
    />
  </div>
  <div
    className="columns userDetails is-gapless"
  >
    <div
      className="column is-narrow authorAvatar"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "",
            "givenName": "J. Researcher",
            "title": "Prof",
            "uqr_id": 410,
          }
        }
      />
    </div>
    <div
      className="column authorDetails"
    >
      <DashboardAuthorDetails
        values={
          Object {
            "familyName": undefined,
            "givenName": undefined,
            "orgUnits": undefined,
            "positions": undefined,
            "title": undefined,
          }
        }
      />
      <DashboardResearcherIds
        values={
          Object {
            "google_scholar": "",
            "orcid": "0000-0001-1111-1111",
            "publons": "",
            "researcher": "G-111-1111",
            "scopus": "",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Profile test renders dashboard even if data is missing - espace 1`] = `
<div
  className="imageCover"
>
  <div
    className="is-pulled-right"
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Your profile help...."
      title="Your dashboard"
    />
  </div>
  <div
    className="columns userDetails is-gapless"
  >
    <div
      className="column is-narrow authorAvatar"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </div>
    <div
      className="column authorDetails"
    >
      <DashboardAuthorDetails
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "orgUnits": Array [
              "Institute for Molecular Bioscience",
              "School of Chemistry and Molecular Biosciences",
              "The University of Queensland Diamantina Institute",
            ],
            "positions": Array [
              "Affiliate Professor",
              "Affiliate Professorial Res Fellow",
              "ARC Australian Laureate Fellow",
            ],
            "title": "Professor",
          }
        }
      />
      <DashboardResearcherIds
        values={
          Object {
            "google_scholar": "",
            "orcid": "0000-0001-1111-1111",
            "publons": "",
            "researcher": "G-111-1111",
            "scopus": "",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Profile test renders dashboard even if data is missing - org units, positions 1`] = `
<div
  className="imageCover"
>
  <div
    className="is-pulled-right"
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Your profile help...."
      title="Your dashboard"
    />
  </div>
  <div
    className="columns userDetails is-gapless"
  >
    <div
      className="column is-narrow authorAvatar"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </div>
    <div
      className="column authorDetails"
    >
      <DashboardAuthorDetails
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "orgUnits": undefined,
            "positions": undefined,
            "title": "Professor",
          }
        }
      />
      <DashboardResearcherIds
        values={
          Object {
            "google_scholar": "",
            "orcid": "0000-0001-1111-1111",
            "publons": "",
            "researcher": "G-111-1111",
            "scopus": "",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Profile test renders dashboard with all data present 1`] = `
<div
  className="imageCover"
>
  <div
    className="is-pulled-right"
  >
    <Connect(HelpIcon)
      buttonLabel="OK"
      text="Your profile help...."
      title="Your dashboard"
    />
  </div>
  <div
    className="columns userDetails is-gapless"
  >
    <div
      className="column is-narrow authorAvatar"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </div>
    <div
      className="column authorDetails"
    >
      <DashboardAuthorDetails
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "orgUnits": Array [
              "Institute for Molecular Bioscience",
              "School of Chemistry and Molecular Biosciences",
              "The University of Queensland Diamantina Institute",
            ],
            "positions": Array [
              "Affiliate Professor",
              "Affiliate Professorial Res Fellow",
              "ARC Australian Laureate Fellow",
            ],
            "title": "Professor",
          }
        }
      />
      <DashboardResearcherIds
        values={
          Object {
            "google_scholar": "",
            "orcid": "0000-0001-1111-1111",
            "publons": "",
            "researcher": "G-111-1111",
            "scopus": "",
          }
        }
      />
    </div>
    <div
      className="column is-narrow is-hidden-tablet-only authorCount"
    >
      <DashboardArticleCount
        values={
          Object {
            "articleCount": "282",
            "articleFirstYear": 1990,
            "articleLastYear": 2017,
          }
        }
      />
    </div>
  </div>
</div>
`;
